--- a/src/app/usuario/listagem-usuario/listagem-usuario.component.html
+++ b/src/app/usuario/listagem-usuario/listagem-usuario.component.html
@@ -2,19 +2,19 @@
   <mat-icon matBadge="{{usuarios.length}}" matBadgeColor="warn">people</mat-icon>
 </div>
 
-<div fxLayout="row wrap" >
+<div fxLayout="row wrap"  fxLayout.lt-sm="column">
   <mat-card *ngFor="let usuario of usuarios" class="mat-card-simples">
     <mat-card-header>
       <mat-card-title>
         <mat-icon>person</mat-icon>
         {{usuario.nome}}</mat-card-title>
-      <mat-card-subtitle class="sub" *ngIf="usuario.cpf">CPF: {{usuario.cpf}}  Idade: {{usuario.idade}}</mat-card-subtitle>
+      <mat-card-subtitle class="sub" *ngIf="usuario.cpf.length">CPF: {{usuario.cpf | cpf}}  Idade: {{usuario.idade}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       Blablabla blaBlablabla blaBlablabla blaBlablabla blaBlablabla blaBlablabla blaBlablabla bla
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button color="primary" (click)="editar(usuario)">Editar</button>
+      <button mat-button color="primary" [routerLink]="['/editausuario', usuario.cpf]">Editar</button>
       <button mat-button color="warn" (click)="excluir(usuario)">Excluir</button>
     </mat-card-actions>
   </mat-card>
